# agentic-rag-chatbot-2

./: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  README.md  pyproject.toml
src/agentic_rag_chatbot/: crew.py  main.py
src/agentic_rag_chatbot/config/chatbot/: agents.yaml  tasks.yaml
src/agentic_rag_chatbot/tools/: custom_tool.py  preprocess_docs.py
tests/: test_rag.py
